[project]
name = "agentic-testing-101"
version = "0.1.0"
description = "An example of using local MCP and LangChain to test an agentic system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=11.30.0",
    "arize-phoenix-otel>=0.13.0",
    "langchain-ollama>=0.3.7",
    "langgraph>=0.6.6",
    "mcp-use>=1.3.10",
    "openinference-instrumentation-langchain>=0.1.51",
]
